--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=python
 
 diceware/
+playground.py
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
